export interface Administrador {
  id_administrador: string
  nombre: string
  email: string
  contraseña: string
}